added php course, lesson & template

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 							<li><a href="html-course/introduction.html">HTML Course</a></li>
 							<li><a href="css-course/selectors.html">CSS Course</a></li>
 							<li><a href="javascript-course/introduction.html">JavaScript Course</a></li>
+							<li><a href="php-course/introduction.html">PHP Course</a></li>
 							<li><a href="resources.html">Resources</a></li>
 						</ul>
 					</div>
@@ -42,6 +43,9 @@
 						<h2>Introduction to JavaScript</h2>
 						<p>JavaScript is the language of the web. You can use it to add dynamic behavior, store information, and handle requests and responses on a website. The concepts covered in these courses lay the foundation for adding this behavior.</p>
 						<p>You will learn introductory level object oriented programming using ES6 JavaScript. This course sequence covers data types and structures, functions, and object-oriented programming with classical inheritance. Though you will learn these concepts in the context of ES6 syntax, they are required knowledge for understanding object oriented programming.</p>
+						<h2>Learn PHP</h2>
+						<p>PHP is a widely used server-side programming language that’s become increasingly fast and powerful over the years. PHP works well with HTML and databases, making it a great language for anyone interested in building dynamic web applications.</p>
+						<p>In this course, you’ll be exposed to fundamental programming concepts in PHP.</p>
 					</div>
 				</div>
             </div>
