updated template, lessons & resources

--- a/php-course/introduction.html
+++ b/php-course/introduction.html
@@ -21,22 +21,22 @@
 					<div id="content_left">
 						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
 							<li class="active"><a href="introduction.html">Introduction to PHP</a></li>
-							<li><a href="#">PHP Strings and Variables</a></li>
-							<li><a href="#">PHP Numbers</a></li>
-							<li><a href="#">Introduction to PHP Functions</a></li>
-							<li><a href="#">Intro to Built-in PHP Functions</a></li>
-							<li><a href="#">Ordered Arrays</a></li>
-							<li><a href="#">Associative Arrays</a></li>
-							<li><a href="#">PHP and HTML</a></li>
-							<li><a href="#">HTML Form Handling in PHP</a></li>
-							<li><a href="#">Booleans and Comparison Operators</a></li>
-							<li><a href="#">Logical Operators and Compound Conditions</a></li>
-							<li><a href="#">Loops</a></li>
-							<li><a href="#">Loops in HTML</a></li>
-							<li><a href="#">Introduction to Form Validation</a></li>
-							<li><a href="#">Introduction to Regular Expressions</a></li>
-							<li><a href="#">Introduction to PHP Form Validation</a></li>
-							<li><a href="#">Classes and Objects</a></li>
+							<li><a href="strings.html">PHP Strings and Variables</a></li>
+							<li><a href="numbers.html">PHP Numbers</a></li>
+							<li><a href="functions.html">Introduction to PHP Functions</a></li>
+							<li><a href="builtin.html">Intro to Built-in PHP Functions</a></li>
+							<li><a href="ordered.html">Ordered Arrays</a></li>
+							<li><a href="associative.html">Associative Arrays</a></li>
+							<li><a href="html.html">PHP and HTML</a></li>
+							<li><a href="form.html">HTML Form Handling in PHP</a></li>
+							<li><a href="comparison.html">Booleans and Comparison Operators</a></li>
+							<li><a href="conditions.html">Logical Operators and Compound Conditions</a></li>
+							<li><a href="loops.html">Loops</a></li>
+							<li><a href="loops2.html">Loops in HTML</a></li>
+							<li><a href="validation.html">Introduction to Form Validation</a></li>
+							<li><a href="regex.html">Introduction to Regular Expressions</a></li>
+							<li><a href="validation2.html">Introduction to PHP Form Validation</a></li>
+							<li><a href="classes.html">Classes and Objects</a></li>
 							<li><a href="../index.html">&larr; Back to Courses</a></li>
 						</ul>
 					</div>
