--- a/php-course/strings.html
+++ b/php-course/strings.html
@@ -20,8 +20,8 @@
 				<div class="col-md-2">
 					<div id="content_left">
 						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-							<li class="active"><a href="introduction.html">Introduction to PHP</a></li> <!-- make lesson active -->
-							<li><a href="strings.html">PHP Strings and Variables</a></li>
+							<li><a href="introduction.html">Introduction to PHP</a></li>
+							<li class="active"><a href="strings.html">PHP Strings and Variables</a></li>
 							<li><a href="numbers.html">PHP Numbers</a></li>
 							<li><a href="functions.html">Introduction to PHP Functions</a></li>
 							<li><a href="builtin.html">Intro to Built-in PHP Functions</a></li>
@@ -44,12 +44,24 @@
 				<div class="col-md-10">
 					<div id="content_right">
 						<h1>Learn PHP</h1>
-						<h2>Lesson</h2>
+						<h2>PHP Strings and Variables</h2>
 						<h3>Review</h3>
-						<p>Paragraph</p>
+						<p>Awesome work! We’ve covered a lot of material in this lesson, so let’s review:</p>
 						<ul>
-							<li>Unordered List Item</li>
+							<li>Strings are collections of text that the computer treats as a single piece of data.</li>
+							<li>A string can be any length and contain any letters, numbers, symbols, or spaces surrounded by quotation marks.</li>
+							<li>In order to include certain characters inside strings we have to use escape sequences.</li>
+							<li>An <em>operator</em> is a character that performs a task in our code.</li>
+							<li>We can use the concatenation operator (.) to combine two strings into one.</li>
+							<li>Variables are a fundamental programming concept which allow us to easily reuse data in our code.</li>
+							<li>We declare a variable using the dollar sign ($) followed by the variable name and then use the assignment operator (=) to give it a value.</li>
+							<li>PHP has variable parsing which allows us to include variables directly in our strings.</li>
+							<li>Once a variable has been assigned, we can change its value. This is called reassignment.</li>
+							<li>We can create an alias for a variable, instead of just a copy, using the reference assignment operator (=&).</li>
+							<li>Operations to the right of the assignment operator will be evaluated before assignment takes place.</li>
+							<li>The concatenating assignment operator (.=) is a shorthand notation for reassigning a string variable to its current value appended with another string value.</li>
 						</ul>
+						<p>If that was a lot to take in, don’t worry about memorizing everything right away. Remember that when you want to explore more about the language, the documentation is a great place to get comfortable exploring.</p>
 					</div>
 				</div>
             </div>
