added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -102,8 +102,9 @@
 									<li><a href="https://cakephp.org" target="_blank" rel="noopener">CakePHP</a></li>
 									<li><a href="https://symfony.com" target="_blank" rel="noopener">Symfony</a></li>
 								</ul>
-							<li><a href="http://php.net/manual/en/language.types.string.php" target="_blank" rel="noopener">Official PHP Documentation</a></li>
-							<li><a href="http://php.net/manual/en/langref.php" target="_blank" rel="noopener">Official PHP Documentation</a></li>							
+							<li><a href="http://php.net/manual/en/language.types.string.php" target="_blank" rel="noopener">PHP Strings</a></li>
+							<li><a href="http://php.net/manual/en/langref.php" target="_blank" rel="noopener">PHP Language Reference</a></li>
+							<li><a href="https://www.php.net/manual/en/language.operators.increment.php" target="_blank" rel="noopener">PHP Incrementing/Decrementing Operators</a></li>							
 						</ul>
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
 					</div>
