added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -110,6 +110,16 @@
 									</ul>
 									<li><a href="https://www.php.net/manual/en/funcref.php" target="_blank" rel="noopener">Function Reference</a></li>
 									<ul>
+										<li><a href="https://www.php.net/manual/en/ref.array.php" target="_blank" rel="noopener">Array Functions</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/function.array.php" target="_blank" rel="noopener">array</a></li>
+											<li><a href="https://www.php.net/manual/en/function.array-pop.php" target="_blank" rel="noopener">array-pop</a></li>
+											<li><a href="https://www.php.net/manual/en/function.array-push.php" target="_blank" rel="noopener">array-push</a></li>
+											<li><a href="https://www.php.net/manual/en/function.array-shift.php" target="_blank" rel="noopener">array-shift</a></li>
+											<li><a href="https://www.php.net/manual/en/function.array-unshift.php" target="_blank" rel="noopener">array-unshift</a></li>
+											<li><a href="https://www.php.net/manual/en/function.count.php" target="_blank" rel="noopener">count</a></li>
+										</ul>
+										
 										<li><a href="https://www.php.net/manual/en/ref.math.php" target="_blank" rel="noopener">Math Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.abs.php" target="_blank" rel="noopener">abs</a></li>
@@ -123,6 +133,7 @@
 										<li><a href="https://www.php.net/manual/en/ref.strings.php" target="_blank" rel="noopener">String Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.echo.php" target="_blank" rel="noopener">echo</a></li>
+											<li><a href="https://www.php.net/manual/en/function.implode.php" target="_blank" rel="noopener">implode</a></li>
 											<li><a href="https://www.php.net/manual/en/function.str-pad.php" target="_blank" rel="noopener">str_pad</a></li>
 											<li><a href="https://www.php.net/manual/en/function.str-repeat.php" target="_blank" rel="noopener">str_repeat</a></li>
 											<li><a href="https://www.php.net/manual/en/function.strrev.php" target="_blank" rel="noopener">strrev</a></li>
@@ -133,6 +144,7 @@
 										<li><a href="https://www.php.net/manual/en/ref.var.php" target="_blank" rel="noopener">Variable Handling Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.gettype.php" target="_blank" rel="noopener">gettype</a></li>
+											<li><a href="https://www.php.net/manual/en/function.print-r.php" target="_blank" rel="noopener">print-r</a></li>
 											<li><a href="https://www.php.net/manual/en/function.var-dump.php" target="_blank" rel="noopener">var_dump</a></li>
 										</ul>
 									</ul>
