added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -145,6 +145,7 @@
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.gettype.php" target="_blank" rel="noopener">gettype</a></li>
 											<li><a href="https://www.php.net/manual/en/function.print-r.php" target="_blank" rel="noopener">print-r</a></li>
+											<li><a href="https://www.php.net/manual/en/function.unset.php" target="_blank" rel="noopener">unset</a></li>
 											<li><a href="https://www.php.net/manual/en/function.var-dump.php" target="_blank" rel="noopener">var_dump</a></li>
 										</ul>
 									</ul>
