added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -119,7 +119,10 @@
 											<li><a href="https://www.php.net/manual/en/function.array-unshift.php" target="_blank" rel="noopener">array-unshift</a></li>
 											<li><a href="https://www.php.net/manual/en/function.count.php" target="_blank" rel="noopener">count</a></li>
 										</ul>
-										
+										<li><a href="https://www.php.net/manual/en/ref.datetime.php" target="_blank" rel="noopener">Date/Time Functions</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/function.date.php" target="_blank" rel="noopener">date</a></li>
+										</ul>
 										<li><a href="https://www.php.net/manual/en/ref.math.php" target="_blank" rel="noopener">Math Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.abs.php" target="_blank" rel="noopener">abs</a></li>
@@ -129,7 +132,10 @@
 											<li><a href="https://www.php.net/manual/en/function.rand.php" target="_blank" rel="noopener">rand</a></li>
 											<li><a href="https://www.php.net/manual/en/function.round.php" target="_blank" rel="noopener">round</a></li>
 										</ul>
-										<li><a href="https://www.php.net/manual/en/string.constants.php" target="_blank" rel="noopener">Predefined Constants</a></li>
+										<li><a href="https://www.php.net/manual/en/ref.readline.php" target="_blank" rel="noopener">Readline Functions</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/function.readline.php" target="_blank" rel="noopener">readline</a></li>
+										</ul>										
 										<li><a href="https://www.php.net/manual/en/ref.strings.php" target="_blank" rel="noopener">String Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.echo.php" target="_blank" rel="noopener">echo</a></li>
@@ -151,9 +157,11 @@
 									</ul>
 									<li><a href="https://www.php.net/manual/en/langref.php" target="_blank" rel="noopener">Language Reference</a></li>
 									<ul>
+										<li><a href="https://www.php.net/manual/en/language.control-structures.php" target="_blank" rel="noopener">Control Structures</a></li>
 										<li><a href="https://www.php.net/manual/en/language.operators.php" target="_blank" rel="noopener">Operators</a></li>
 										<li><a href="https://www.php.net/manual/en/language.types.php" target="_blank" rel="noopener">Types</a></li>
 									</ul>
+									<li><a href="https://www.php.net/manual/en/string.constants.php" target="_blank" rel="noopener">Predefined Constants</a></li>
 								</ul>
 						</ul>
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
