added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -118,6 +118,8 @@
 											<li><a href="https://www.php.net/manual/en/function.array-shift.php" target="_blank" rel="noopener">array-shift</a></li>
 											<li><a href="https://www.php.net/manual/en/function.array-unshift.php" target="_blank" rel="noopener">array-unshift</a></li>
 											<li><a href="https://www.php.net/manual/en/function.count.php" target="_blank" rel="noopener">count</a></li>
+											<li><a href="https://www.php.net/manual/en/function.in-array.php" target="_blank" rel="noopener">in_array</a></li>
+
 										</ul>
 										<li><a href="https://www.php.net/manual/en/ref.datetime.php" target="_blank" rel="noopener">Date/Time Functions</a></li>
 										<ul>
@@ -132,6 +134,7 @@
 											<li><a href="https://www.php.net/manual/en/function.rand.php" target="_blank" rel="noopener">rand</a></li>
 											<li><a href="https://www.php.net/manual/en/function.round.php" target="_blank" rel="noopener">round</a></li>
 										</ul>
+										<li><a href="https://www.php.net/manual/en/string.constants.php" target="_blank" rel="noopener">Predefined Constants</a></li>
 										<li><a href="https://www.php.net/manual/en/ref.readline.php" target="_blank" rel="noopener">Readline Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.readline.php" target="_blank" rel="noopener">readline</a></li>
@@ -159,9 +162,11 @@
 									<ul>
 										<li><a href="https://www.php.net/manual/en/language.control-structures.php" target="_blank" rel="noopener">Control Structures</a></li>
 										<li><a href="https://www.php.net/manual/en/language.operators.php" target="_blank" rel="noopener">Operators</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/language.operators.precedence.php" target="_blank" rel="noopener">Operator Precedence</a></li>
+										</ul>
 										<li><a href="https://www.php.net/manual/en/language.types.php" target="_blank" rel="noopener">Types</a></li>
 									</ul>
-									<li><a href="https://www.php.net/manual/en/string.constants.php" target="_blank" rel="noopener">Predefined Constants</a></li>
 								</ul>
 						</ul>
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
