added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -102,6 +102,12 @@
 									<li><a href="https://cakephp.org" target="_blank" rel="noopener">CakePHP</a></li>
 									<li><a href="https://symfony.com" target="_blank" rel="noopener">Symfony</a></li>
 								</ul>
+							<li>Form Validation</li>
+								<ul>
+									<li><a href="https://www.npmjs.com/package/just-validate" target="_blank" rel="noopener">Just-validate</a></li>
+									<li><a href="https://www.npmjs.com/package/formik" target="_blank" rel="noopener">Formik</a></li>
+									<li><a href="https://parsleyjs.org/" target="_blank" rel="noopener">Parsley</a></li>
+								</ul>
 							<li>PHP Manual</li>
 								<ul>
 									<li><a href="https://www.php.net/manual/en/appendices.php" target="_blank" rel="noopener">Appendices</a></li>
