added & updated lessons

--- a/php-course/validation.html
+++ b/php-course/validation.html
@@ -56,7 +56,7 @@
 							<li>Asynchronous requests to the server can perform back-end validations before a form has been submitted.</li>
 							<li>A final back-end validation of all data is required to ensure an application’s security and sanitize all data.</li>
 						</ul>
-						<img src="images/xkcd.png" alt="Exploits of a Mom" />
+						<img src="images/xkcd1.png" alt="Exploits of a Mom" />
 					</div>
 				</div>
             </div>
