added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -108,6 +108,10 @@
 									<li><a href="https://www.npmjs.com/package/formik" target="_blank" rel="noopener">Formik</a></li>
 									<li><a href="https://parsleyjs.org/" target="_blank" rel="noopener">Parsley</a></li>
 								</ul>
+							<li>MDN Web Docs</li>
+								<ul>
+									<li><a href="https://developer.mozilla.org/en-US/docs/Glossary/Entity" target="_blank" rel="noopener">Entity</a></li>
+								</ul>
 							<li>PHP Manual</li>
 								<ul>
 									<li><a href="https://www.php.net/manual/en/appendices.php" target="_blank" rel="noopener">Appendices</a></li>
@@ -131,6 +135,10 @@
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.date.php" target="_blank" rel="noopener">date</a></li>
 										</ul>
+										<li><a href="https://www.php.net/manual/en/ref.filter.php" target="_blank" rel="noopener">Filters Functions</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/function.filter-var.php" target="_blank" rel="noopener">filter_var</a></li>
+										</ul>
 										<li><a href="https://www.php.net/manual/en/ref.math.php" target="_blank" rel="noopener">Math Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.abs.php" target="_blank" rel="noopener">abs</a></li>
@@ -140,6 +148,14 @@
 											<li><a href="https://www.php.net/manual/en/function.rand.php" target="_blank" rel="noopener">rand</a></li>
 											<li><a href="https://www.php.net/manual/en/function.round.php" target="_blank" rel="noopener">round</a></li>
 										</ul>
+										<li><a href="https://www.php.net/manual/en/ref.network.php" target="_blank" rel="noopener">Network Functions</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/function.header.php" target="_blank" rel="noopener">header</a></li>
+										</ul>
+										<li><a href="https://www.php.net/manual/en/ref.pcre.php" target="_blank" rel="noopener">PCRE Functions</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/function.preg-match.php" target="_blank" rel="noopener">preg_match</a></li>
+										</ul>
 										<li><a href="https://www.php.net/manual/en/string.constants.php" target="_blank" rel="noopener">Predefined Constants</a></li>
 										<li><a href="https://www.php.net/manual/en/ref.readline.php" target="_blank" rel="noopener">Readline Functions</a></li>
 										<ul>
@@ -148,13 +164,21 @@
 										<li><a href="https://www.php.net/manual/en/ref.strings.php" target="_blank" rel="noopener">String Functions</a></li>
 										<ul>
 											<li><a href="https://www.php.net/manual/en/function.echo.php" target="_blank" rel="noopener">echo</a></li>
+											<li><a href="https://www.php.net/manual/en/function.htmlspecialchars.php" target="_blank" rel="noopener">htmlspecialchars</a></li>
 											<li><a href="https://www.php.net/manual/en/function.implode.php" target="_blank" rel="noopener">implode</a></li>
 											<li><a href="https://www.php.net/manual/en/function.str-pad.php" target="_blank" rel="noopener">str_pad</a></li>
 											<li><a href="https://www.php.net/manual/en/function.str-repeat.php" target="_blank" rel="noopener">str_repeat</a></li>
+											<li><a href="https://www.php.net/manual/en/function.strlen.php" target="_blank" rel="noopener">strlen</a></li>
 											<li><a href="https://www.php.net/manual/en/function.strrev.php" target="_blank" rel="noopener">strrev</a></li>
 											<li><a href="https://www.php.net/manual/en/function.strtolower.php" target="_blank" rel="noopener">strtolower</a></li>
 											<li><a href="https://www.php.net/manual/en/function.strtoupper.php" target="_blank" rel="noopener">strtoupper</a></li>
 											<li><a href="https://www.php.net/manual/en/function.substr-count.php" target="_blank" rel="noopener">substr_count</a></li>
+											<li><a href="https://www.php.net/manual/en/function.trim.php" target="_blank" rel="noopener">trim</a></li>
+										</ul>
+										<li><a href="https://www.php.net/manual/en/filter.filters.php" target="_blank" rel="noopener">Types of Filters</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/filter.filters.sanitize.php" target="_blank" rel="noopener">Sanitize Filters</a></li>
+											<li><a href="https://www.php.net/manual/en/filter.filters.validate.php" target="_blank" rel="noopener">Validate Filters</a></li>
 										</ul>
 										<li><a href="https://www.php.net/manual/en/ref.var.php" target="_blank" rel="noopener">Variable Handling Functions</a></li>
 										<ul>
