added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -190,6 +190,11 @@
 									</ul>
 									<li><a href="https://www.php.net/manual/en/langref.php" target="_blank" rel="noopener">Language Reference</a></li>
 									<ul>
+										<li><a href="https://www.php.net/manual/en/language.oop5.php" target="_blank" rel="noopener">Classes and Objects</a></li>
+										<ul>
+											<li><a href="https://www.php.net/manual/en/language.oop5.magic.php" target="_blank" rel="noopener">Magic Methods</a></li>
+											<li><a href="https://www.php.net/manual/en/language.oop5.paamayim-nekudotayim.php" target="_blank" rel="noopener">Scope Resolution Operator</a></li>
+										</ul>
 										<li><a href="https://www.php.net/manual/en/language.control-structures.php" target="_blank" rel="noopener">Control Structures</a></li>
 										<li><a href="https://www.php.net/manual/en/language.operators.php" target="_blank" rel="noopener">Operators</a></li>
 										<ul>
