added sql course, lesson & template & updated resources

--- a/resources.html
+++ b/resources.html
@@ -25,6 +25,7 @@
 							<li><a href="#css-resources">CSS Resources</a></li>
 							<li><a href="#javascript-resources">JavaScript Resources</a></li>
 							<li><a href="#php-resources">PHP Resources</a></li>
+							<li><a href="#sql-resources">SQL Resources</a></li>
 							<li><a href="index.html">&larr; Back to Courses</a></li>
 						</ul>
 					</div>
@@ -202,6 +203,15 @@
 										</ul>
 										<li><a href="https://www.php.net/manual/en/language.types.php" target="_blank" rel="noopener">Types</a></li>
 									</ul>
+								</ul>
+						</ul>
+						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
+						<h2 id="sql-resources">Learn SQL</h2>
+						<ul>
+							<li>Codecademy Articles</li>
+								<ul>
+									<li><a href="https://www.codecademy.com/articles/what-is-rdbms-sql" target="_blank" rel="noopener">What is a Relational Database Management System?</a></li>
+									<li><a href="https://www.codecademy.com/articles/sql-commands" target="_blank" rel="noopener">List of SQL Commands</a></li>
 								</ul>
 						</ul>
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
