--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 							<li><a href="css-course/selectors.html">CSS Course</a></li>
 							<li><a href="javascript-course/introduction.html">JavaScript Course</a></li>
 							<li><a href="php-course/introduction.html">PHP Course</a></li>
+							<li><a href="sql-course/manipulation.html">SQL Course</a></li>
 							<li><a href="resources.html">Resources</a></li>
 						</ul>
 					</div>
@@ -46,6 +47,9 @@
 						<h2>Learn PHP</h2>
 						<p>PHP is a widely used server-side programming language that’s become increasingly fast and powerful over the years. PHP works well with HTML and databases, making it a great language for anyone interested in building dynamic web applications.</p>
 						<p>In this course, you’ll be exposed to fundamental programming concepts in PHP.</p>
+						<h2>Learn SQL</h2>
+						<p>We live in a data-driven world: people search through data to find insights to inform strategy, marketing, operations, and a plethora of other categories. There are a ton of businesses that use large, relational databases, which makes a basic understanding of SQL a great employable skill not only for data scientists, but for almost everyone.</p>
+						<p>In this course, you’ll learn how to communicate with relational databases through SQL. You’ll learn how to manipulate data and build queries that communicate with more than one table.</p>
 					</div>
 				</div>
             </div>
