added lesson & updated resources

--- a/resources.html
+++ b/resources.html
@@ -212,6 +212,7 @@
 								<ul>
 									<li><a href="https://www.codecademy.com/articles/what-is-rdbms-sql" target="_blank" rel="noopener">What is a Relational Database Management System?</a></li>
 									<li><a href="https://www.codecademy.com/articles/sql-commands" target="_blank" rel="noopener">List of SQL Commands</a></li>
+									<li><a href="https://www.codecademy.com/articles/what-is-sqlite" target="_blank" rel="noopener">What is SQLite?</a></li>
 								</ul>
 						</ul>
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
