replace react I with java course & template

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<li><a href="javascript-course/introduction.html">JavaScript Course</a></li>
 							<li><a href="php-course/introduction.html">PHP Course</a></li>
 							<li><a href="sql-course/manipulation.html">SQL Course</a></li>
-							<li><a href="react-course/intro.html">React I Course</a></li>
+							<li><a href="java-course/hello.html">Java Course</a></li>
 							<li><a href="resources.html">Resources</a></li>
 						</ul>
 					</div>
@@ -51,9 +51,9 @@
 						<h2>Learn SQL</h2>
 						<p>We live in a data-driven world: people search through data to find insights to inform strategy, marketing, operations, and a plethora of other categories. There are a ton of businesses that use large, relational databases, which makes a basic understanding of SQL a great employable skill not only for data scientists, but for almost everyone.</p>
 						<p>In this course, you’ll learn how to communicate with relational databases through SQL. You’ll learn how to manipulate data and build queries that communicate with more than one table.</p>
-						<h2>Learn ReactJS: Part I</h2>
-						<p>ReactJS presents graceful solutions to some of front-end programming’s most persistent issues. It’s fast, scalable, flexible, powerful, and has a robust developer community that’s rapidly growing. There’s never been a better time to learn React.</p>
-						<p>You’ll develop a strong understanding of React’s most essential concepts: JSX, components, and storing information via props and state. You’ll be able to combine these ideas in React’s modular programming style.</p>
+						<h2>Learn Java</h2>
+						<p>Java is among the most popular programming languages out there, mainly because of how versatile and compatible it is. Java can be used for a large number of things, including software development, mobile applications, and large systems development. As of 2019, 88% market share of all smartphones run on Android, the mobile operating system written in Java. Knowing Java opens a great deal of doors for you as a developer.</p>
+						<p>In this course you’ll be exposed to fundamental programming concepts, including object-oriented programming (OOP) using Java. You’ll build 7 Java projects—like a basic calculator—to help you practice along the way.</p>
 					</div>
 				</div>
             </div>
