--- a/java-course/template.html
+++ b/java-course/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>	
-		<title>Learn ReactJS: Part I</title>	
+		<title>Learn Java</title>	
 		<script src="../js/jquery.min.js"></script> <!-- jquery libraries -->
 		<script src="../js/handlebars-v3.0.3.js"></script> <!-- handlebars libraries -->
 		<script src="../js/bootstrap.min.js"></script> <!-- bootstrap libraries -->
@@ -20,21 +20,28 @@
 				<div class="col-md-2">
 					<div id="content_left">
 						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-							<li class="active"><a href="intro.html">Intro to JSX</a></li>
-							<li><a href="advanced.html">Advanced JSX</a></li>
-							<li><a href="react.html">Your First React Component</a></li>
-							<li><a href="components.html">Components and Advanced JSX</a></li>
-							<li><a href="render.html">Components Render Other Components</a></li>
-							<li><a href="props.html">this.props</a></li>
-							<li><a href="state.html">this.state</a></li>
+							<li class="active"><a href="hello.html">Hello World</a></li> <!-- make lesson active -->
+							<li><a href="variables.html">Variables</a></li>
+							<li><a href="manipulating.html">Manipulating Variables</a></li>
+							<li><a href="objects.html">Classes and Objects</a></li>
+							<li><a href="classes.html">Introduction to Classes</a></li>
+							<li><a href="methods.html">Methods</a></li>
+							<li><a href="conditionals.html">Conditionals and Control Flow</a></li>
+							<li><a href="operators.html">Conditional Operators</a></li>
+							<li><a href="arrays.html">Arrays</a></li>
+							<li><a href="arraylists.html">ArrayLists</a></li>
+							<li><a href="loops.html">Loops</a></li>
+							<li><a href="string.html">String Methods</a></li>
+							<li><a href="inheritance.html">Inheritance and Polymorphism</a></li>
+							<li><a href="debugging.html">Debugging</a></li>
 							<li><a href="../index.html">&larr; Back to Courses</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-10">
 					<div id="content_right">
-						<h1>Learn ReactJS: Part I</h1>
-						<h2>Intro to JSX</h2>
+						<h1>Learn Java</h1>
+						<h2>Lesson</h2>
 						<h3>Review</h3>
 						<p>Paragraph</p>
 						<ul>
