--- a/resources.html
+++ b/resources.html
@@ -26,7 +26,7 @@
 							<li><a href="#javascript-resources">JavaScript Resources</a></li>
 							<li><a href="#php-resources">PHP Resources</a></li>
 							<li><a href="#sql-resources">SQL Resources</a></li>
-							<li><a href="#react-resources">React I Resources</a></li>
+							<li><a href="#java-resources">Java Resources</a></li>
 							<li><a href="index.html">&larr; Back to Courses</a></li>
 						</ul>
 					</div>
@@ -217,7 +217,7 @@
 								</ul>
 						</ul>
 						<p><a href="#all-resources">&uarr; Back to Resources</a></p>
-						<h2 id="react-resources">Learn ReactJS: Part I</h2>
+						<h2 id="java-resources">Learn Java</h2>
 						<ul>
 							<li>Resource</li>
 						</ul>
