add java lesson 1/14 & .gitignore file

--- a/java-course/hello.html
+++ b/java-course/hello.html
@@ -20,7 +20,7 @@
 				<div class="col-md-2">
 					<div id="content_left">
 						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-							<li class="active"><a href="hello.html">Hello World</a></li> <!-- make lesson active -->
+							<li class="active"><a href="hello.html">Hello World</a></li>
 							<li><a href="variables.html">Variables</a></li>
 							<li><a href="manipulating.html">Manipulating Variables</a></li>
 							<li><a href="objects.html">Classes and Objects</a></li>
@@ -42,11 +42,29 @@
 					<div id="content_right">
 						<h1>Learn Java</h1>
 						<h2>Hello World</h2>
-						<h3>Review</h3>
-						<p>Paragraph</p>
+						<h3>Java Review: Putting It All Together</h3>
+						<p>In this lesson, we’ve started writing our first programs in Java.</p>
+						<p>We’ve also learned rules and guidelines for how to write Java programs:</p>
 						<ul>
-							<li>Unordered List Item</li>
+							<li>Java programs have at least one class and one <code>main()</code> method.</li>
+							<ul>
+								<li>Each class represents one real-world idea.</li>
+								<li>The <code>main()</code> method runs the tasks of the program.</li>
+							</ul>
+							<li>Java comments add helpful context to human readers.</li>
+							<li>Java has whitespace, curly braces, and semicolons.</li>
+							<ul>
+								<li>Whitespace is for humans to read code easily.</li>
+								<li>Curly braces mark the scope of a class and method.</li>
+								<li>Semicolons mark the end of a statement.</li>
+							</ul>
+							<li>Java is a compiled language.</li>
+							<ul>
+								<li>Compiling catches mistakes in our code.</li>
+								<li>Compilers transform code into an executable class.</li>
+							</ul>
 						</ul>
+						<p>Download the <a href="../pdfs/learn-java-hello-world.pdf" target="_blank" rel="noopener">Hello World: Cheat Sheet</a> to help you remember the content covered in this lesson.</p>
 					</div>
 				</div>
             </div>
