add java lesson 4/13 & update navigation

--- a/java-course/classes.html
+++ b/java-course/classes.html
@@ -20,10 +20,10 @@
 				<div class="col-md-2">
 					<div id="content_left">
 						<ul class="nav nav-pills nav-stacked nav-pills-stacked-example">
-							<li class="active"><a href="hello.html">Hello World</a></li> <!-- make lesson active -->
+							<li><a href="hello.html">Hello World</a></li>
 							<li><a href="variables.html">Variables</a></li>
 							<li><a href="manipulating.html">Manipulating Variables</a></li>
-							<li><a href="classes.html">Introduction to Classes</a></li>
+							<li class="active"><a href="classes.html">Introduction to Classes</a></li>
 							<li><a href="methods.html">Methods</a></li>
 							<li><a href="conditionals.html">Conditionals and Control Flow</a></li>
 							<li><a href="operators.html">Conditional Operators</a></li>
@@ -40,12 +40,12 @@
 				<div class="col-md-10">
 					<div id="content_right">
 						<h1>Learn Java</h1>
-						<h2>Lesson</h2>
+						<h2>Introduction to Classes</h2>
 						<h3>Review</h3>
-						<p>Paragraph</p>
-						<ul>
-							<li>Unordered List Item</li>
-						</ul>
+						<p>Java is an object-oriented programming language where every program has at least one class. Programs are often built from many classes and objects, which are the instances of a class.</p>
+						<p>Classes define the state and behavior of their instances. Behavior comes from methods defined in the class. State comes from instance fields declared inside the class.</p>
+						<p>Classes are modeled on the real-world things we want to represent in our program. Later we will explore how a program can be made from multiple classes. For now, our programs are a single class.</p>
+						<img src="../images/classes.jpg" alt="Class Code Block" />
 					</div>
 				</div>
             </div>
