remove code tags

--- a/java-course/hello.html
+++ b/java-course/hello.html
@@ -45,10 +45,10 @@
 						<p>In this lesson, we’ve started writing our first programs in Java.</p>
 						<p>We’ve also learned rules and guidelines for how to write Java programs:</p>
 						<ul>
-							<li>Java programs have at least one class and one <code>main()</code> method.</li>
+							<li>Java programs have at least one class and one main() method.</li>
 							<ul>
 								<li>Each class represents one real-world idea.</li>
-								<li>The <code>main()</code> method runs the tasks of the program.</li>
+								<li>The main() method runs the tasks of the program.</li>
 							</ul>
 							<li>Java comments add helpful context to human readers.</li>
 							<li>Java has whitespace, curly braces, and semicolons.</li>
