--- a/java-course/manipulating.html
+++ b/java-course/manipulating.html
@@ -45,14 +45,14 @@
 						<p>What’s the use of having variables if you can’t do anything with them? We’ve now seen some ways you can operate on variables and compare them. The possibilities are endless!</p>
 						<p>We covered:</p>
 						<ul>
-							<li>Addition and subtraction, using <code>+</code> and <code>-</code></li>
-							<li>Multiplication and division, using <code>*</code> and <code>/</code></li>
-							<li>The modulo operator for finding remainders, <code>%</code></li>
-							<li>Greater than, <code>></code>, and less than, <code><</code></li>
-							<li>Equal to, <code>==</code>, and not equal to, <code>!=</code></li>
-							<li>Greater than or equal to, <code>>=</code>, and less than or equal to, <code><=</code></li>
-							<li><code>equals()</code> for comparing <code>String</code>s and other objects</li>
-							<li>Using <code>+</code> to concatenate <code>String</code>s</li>
+							<li>Addition and subtraction, using + and -</li>
+							<li>Multiplication and division, using * and /</li>
+							<li>The modulo operator for finding remainders, %</li>
+							<li>Greater than, >, and less than, <</li>
+							<li>Equal to, ==, and not equal to, !=</li>
+							<li>Greater than or equal to, >=, and less than or equal to, <=</li>
+							<li>equals() for comparing Strings and other objects</li>
+							<li>Using + to concatenate Strings</li>
 						</ul>
 						<p>Practice some of these concepts here, to make sure you have a solid foundation for learning more complicated and exciting Java concepts!</p>
 					</div>
