--- a/java-course/variables.html
+++ b/java-course/variables.html
@@ -46,11 +46,11 @@
 						<p>In this lesson, we learned how to create and print several different data types in Java, which you’ll use as you create bigger and more complex programs.</p>
 						<p>We covered:</p>
 						<ul>
-							<li><code>int</code>, which store whole numbers</li>
-							<li><code>double</code>, which store bigger whole numbers and decimal numbers</li>
-							<li><code>boolean</code>, which store <code>true</code> and <code>false</code></li>
-							<li><code>char</code>, which store single characters using single quotes</li>
-							<li><code>String</code>, which store multiple characters using double quotes</li>
+							<li>int, which store whole numbers</li>
+							<li>double, which store bigger whole numbers and decimal numbers</li>
+							<li>boolean, which store true and false</li>
+							<li>char, which store single characters using single quotes</li>
+							<li>String, which store multiple characters using double quotes</li>
 							<li><em>Static typing</em>, which is one of the safety features of Java</li>
 							<li>Variable naming conventions</li>
 						</ul>
